--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -5,3 +5,6 @@
 | 仓库    | 20金    | 15s      | 完成科技$\color{#4EC5F1}{行政机构}$ | 工人可以在采集完成后可以将物资送到仓库而不返回基地 |不可|
 | 农庄    | 30金    | 25s      | 完成科技$\color{#4EC5F1}{农学}$ | 每过一段时间生成一定的食物， |可以|
 | 矿场    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{矿井勘探}$ | 每过一段时间生成一定的黄金 |可以|
+| 兵营    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{军功制}$ | 每过一段时间生成一定的黄金 |可以|
+| 靶场    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{复合弓}$ | 每过一段时间生成一定的黄金 |可以|
+| 马厩    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{矿井勘探}$ | 每过一段时间生成一定的黄金 |可以|
