--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -1,10 +1,17 @@
-* 建筑
+# 建筑
 
-| 建筑名称 | 建筑造价 | 建筑耗时 | 建造条件                            | 建筑功能              |是否可升级|
-|--------|---------|----------|---------------------------------|-------------------------------|-------------------------------|
-| 仓库    | 20金    | 15s      | 完成科技$\color{#4EC5F1}{行政机构}$ | 工人可以在采集完成后可以将物资送到仓库而不返回基地 |不可|
-| 农庄    | 30金    | 25s      | 完成科技$\color{#4EC5F1}{农学}$ | 每过一段时间生成一定的食物， |可以|
-| 矿场    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{矿井勘探}$ | 每过一段时间生成一定的黄金 |可以|
-| 兵营    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{军功制}$ | 每过一段时间生成一定的黄金 |可以|
-| 靶场    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{复合弓}$ | 每过一段时间生成一定的黄金 |可以|
-| 马厩    | 30金    | 35s      | 完成科技$\color{#4EC5F1}{矿井勘探}$ | 每过一段时间生成一定的黄金 |可以|
+## 总览表
+
+| 建筑名称 | 建筑造价 | 建筑耗时 | 建造条件                            | 建筑功能                   | 是否可升级 |
+|--------|---------|----------|---------------------------------|------------------------------------------|----------|
+| **住房**    | 5金    | 10s     | 无  | 提高人口上限                   | 是      |
+| **武器工坊**    | 10金    | 15s     | 完成科技<span style="color:#4EC5F1">手工业</span>  | 提高单位攻击力                   | 是      |
+| **护甲工坊**    | 10金    | 15s     | 完成科技<span style="color:#4EC5F1">手工业</span>  | 提高单位防御力                   | 是      |
+| **仓库**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">行政机构</span> | 工人可以在采集完成后将物资直接送到仓库 | 否      |
+| **农庄**    | 30金    | 25s     | 完成科技<span style="color:#4EC5F1">农学</span>     | 每过一段时间生成一定的食物                   | 是       |
+| **矿场**    | 30金    | 30s     | 完成科技<span style="color:#4EC5F1">矿井勘探</span>  | 每过一段时间生成一定的黄金                   | 是       |
+| **兵营**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">军功制</span>   | 为步兵系单位生产提供增益                    | 是       |
+| **靶场**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">复合弓</span>   | 为弓弩系单位生产提供增益                    | 是       |
+| **马厩**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">马匹育种</span>  | 为骑兵系单位生产提供增益                    | 是      |
+| **兵工厂**  | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">军事技术</span>  | 为攻城武器系单位生产提供增益                 | 是      |
+| **学院**  | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">教育</span>  | 为攻城武器系单位生产提供增益                 | 是      |
