--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -2,16 +2,60 @@
 
 ## 总览表
 
-| 建筑名称 | 建筑造价 | 建筑耗时 | 建造条件                            | 建筑功能                   | 是否可升级 |
-|--------|---------|----------|---------------------------------|------------------------------------------|----------|
-| **住房**    | 5金    | 10s     | 无  | 提高人口上限                   | 是      |
-| **武器工坊**    | 10金    | 15s     | 完成科技<span style="color:#4EC5F1">手工业</span>  | 提高单位攻击力                   | 是      |
-| **护甲工坊**    | 10金    | 15s     | 完成科技<span style="color:#4EC5F1">手工业</span>  | 提高单位防御力                   | 是      |
-| **仓库**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">行政机构</span> | 工人可以在采集完成后将物资直接送到仓库 | 否      |
-| **农庄**    | 30金    | 25s     | 完成科技<span style="color:#4EC5F1">农学</span>     | 每过一段时间生成一定的食物                   | 是       |
-| **矿场**    | 30金    | 30s     | 完成科技<span style="color:#4EC5F1">矿井勘探</span>  | 每过一段时间生成一定的黄金                   | 是       |
-| **兵营**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">军功制</span>   | 为步兵系单位生产提供增益                    | 是       |
-| **靶场**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">复合弓</span>   | 为弓弩系单位生产提供增益                    | 是       |
-| **马厩**    | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">马匹育种</span>  | 为骑兵系单位生产提供增益                    | 是      |
-| **兵工厂**  | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">军事技术</span>  | 为攻城武器系单位生产提供增益                 | 是      |
-| **学院**  | 20金    | 15s     | 完成科技<span style="color:#4EC5F1">教育</span>  | 为攻城武器系单位生产提供增益                 | 是      |
+| 建筑名称     | 建筑造价 | 建筑耗时 | 建造条件                                            | 建筑功能                               | 是否可升级 |
+| ------------ | -------- | -------- | --------------------------------------------------- | -------------------------------------- | ---------- |
+| **住房**     | 5金      | 10s      | 无                                                  | 提高人口上限                           | 是         |
+| **铁匠铺** | 10金     | 15s      | 完成科技<span style="color:#4EC5F1">手工业</span>   | 提高单位攻击力、防御力                         | 是         |
+| **仓库**     | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">行政机构</span> | 工人可以在采集完成后将物资直接送到仓库 | 否         |
+| **农庄**     | 30金     | 25s      | 完成科技<span style="color:#4EC5F1">农学</span>     | 每过一段时间生成一定的食物             | 是         |
+| **矿场**     | 30金     | 30s      | 完成科技<span style="color:#4EC5F1">矿井勘探</span> | 每过一段时间生成一定的黄金             | 是         |
+| **兵营**     | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">军功制</span>   | 为步兵系单位生产提供增益               | 是         |
+| **靶场**     | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">复合弓</span>   | 为弓弩系单位生产提供增益               | 是         |
+| **马厩**     | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">马匹育种</span> | 为骑兵系单位生产提供增益               | 是         |
+| **兵工厂**   | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">军事技术</span> | 为攻城武器系单位生产提供增益           | 是         |
+| **学院**     | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">教育</span>     | 为攻城武器系单位生产提供增益           | 是         |
+
+***
+
+## 机制设计
+
+### 建筑升级
+
+一个建筑可以向多个方向升级，不同方向的升级可以共存。
+建筑一旦被建成，即为其所有升级方向的**LV.1**。
+
+!!! example
+    如玩家在升级住房时可以选择向**工人人口**升级或**军事人口**升级，每次只能向一个方向升一级，消耗的资源和时间为目标等级的对应花销。
+    两个方向的升级可以共存，如住房可以同时为**LV.2 工人人口** + **LV.3 军事人口**。
+
+***
+
+## 详细设计
+
+### 经济类建筑
+
+#### 住房
+
+##### 升级
+
+可以为玩家增加人口上限。具有两个方向的升级。
+|升级方向|LV1|LV2|LV3|LV4|LV5|
+|-----|-----|-----|----|-----|-----|
+|**工人人口**|+3|+3|+3|+5|+8|
+|**军事人口**|+5|+5|+5|+10|+15|
+
+不同升级的花销：
+
+| 升级方向     | LV1         | LV2         | LV3         | LV4         | LV5         |
+| ------------ | ----------- | ----------- | ----------- | ----------- | ----------- |
+| **工人人口** | (5金 + 10s) | (5金 + 10s) | (5金 + 10s) | (5金 + 10s) | (7金 + 15s) |
+| **军事人口** | (5金 + 10s) | (5金 + 10s) | (5金 + 10s) | (5金 + 10s) | (7金 + 15s) |
+
+升级能提供的效果增益：
+| 升级方向     | LV1         | LV2         | LV3         | LV4         | LV5         |
+| ------------ | ----------- | ----------- | ----------- | ----------- | ----------- |
+| **工人人口** | + 10% HP| + 10% HP| + 10% HP| + 10% HP|+ 10% HP|
+| **军事人口** | + 10% HP|+ 10% HP | + 10% HP | + 10% HP |+ 10% HP |
+
+!!! tip
+    住房被摧毁后，所提供的人口上限加成也将消失
