--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -9,20 +9,20 @@ print_background: true
 
 ## 总览表
 
-| 建筑名称   | 建筑造价 | 建筑耗时 | 建造条件                                            | 建筑功能                                         | 是否可升级 |
-| ---------- | -------- | -------- | --------------------------------------------------- | ------------------------------------------------ | ---------- |
-| **住房**   | 5金      | 10s      | 无                                                  | 提高人口上限                                     | 是         |
-| **铁匠铺** | 10金     | 15s      | 完成科技<span style="color:#4EC5F1">手工业</span>   | 提高单位攻击力、防御力                           | 是         |
-| **仓库**   | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">行政机构</span> | 缩短采集路程                                     | 是         |
-| **农庄**   | 30金     | 25s      | 完成科技<span style="color:#4EC5F1">农学</span>     | 每过一段时间生成一定的食物                       | 是         |
-| **矿场**   | 30金     | 30s      | 完成科技<span style="color:#4EC5F1">矿井勘探</span> | 每过一段时间生成一定的黄金                       | 是         |
-| **兵营**   | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">军功制</span>   | 为步兵系单位生产提供增益                         | 是         |
-| **靶场**   | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">复合弓</span>   | 为弓弩系单位生产提供增益                         | 是         |
-| **马厩**   | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">马匹育种</span> | 为骑兵系单位生产提供增益                         | 是         |
-| **兵工厂** | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">军事技术</span> | 为攻城武器系与火药系单位生产提供增益             | 是         |
-| **学院**   | 20金     | 15s      | 完成科技<span style="color:#4EC5F1">教育</span>     | 为科技研发提供增益                               | 是         |
-| **拒马**   | 5金      | 8s       | 完成科技<span style="color:#4EC5F1">军事工程</span> | 吸引火力，阻挡敌方进攻。                         | 是         |
-| **驻防点** | 5金      | 8s       | 完成科技<span style="color:#4EC5F1">复合弓</span>   | 弓弩系单位与火药系单位可以驻扎在驻防点进行射击。 | 是         |
+| 建筑名称   | 建筑造价 | 建筑耗时 | 建造条件                      | 建筑功能                                         | 是否可升级 |
+| ---------- | -------- | -------- | ----------------------------- | ------------------------------------------------ | ---------- |
+| **住房**   | 5金      | 10s      | 无                            | 提高人口上限                                     | 是         |
+| **铁匠铺** | 10金     | 15s      | 研发科技<tech>手工业</tech>   | 提高单位攻击力、防御力                           | 是         |
+| **仓库**   | 20金     | 15s      | 研发科技<tech>行政机构</tech> | 缩短采集路程                                     | 是         |
+| **农庄**   | 30金     | 25s      | 研发科技<tech>农学</tech>     | 每过一段时间生成一定的食物                       | 是         |
+| **矿场**   | 30金     | 30s      | 研发科技<tech>矿井勘探</tech> | 每过一段时间生成一定的黄金                       | 是         |
+| **兵营**   | 20金     | 15s      | 研发科技<tech>军功制</tech>   | 为步兵系单位生产提供增益                         | 是         |
+| **靶场**   | 20金     | 15s      | 研发科技<tech>复合弓</tech>   | 为弓弩系单位生产提供增益                         | 是         |
+| **马厩**   | 20金     | 15s      | 研发科技<tech>马匹育种</tech> | 为骑兵系单位生产提供增益                         | 是         |
+| **兵工厂** | 20金     | 15s      | 研发科技<tech>军事技术</tech> | 为攻城武器系与火药系单位生产提供增益             | 是         |
+| **学院**   | 20金     | 15s      | 研发科技<tech>教育</tech>     | 为科技研发提供增益                               | 是         |
+| **拒马**   | 5金      | 8s       | 研发科技<tech>军事工程</tech> | 吸引火力，阻挡敌方进攻。                         | 是         |
+| **驻防点** | 5金      | 8s       | 研发科技<tech>复合弓</tech>   | 弓弩系单位与火药系单位可以驻扎在驻防点进行射击。 | 是         |
 
 ***
 
@@ -71,9 +71,11 @@ print_background: true
 
 ## 详细设计
 
+|***
+
 ### 住房
 
-`经济类建筑`
+`经济类建筑` 
 
 住房建成后，可以为玩家增加人口上限。
 
@@ -82,22 +84,69 @@ print_background: true
 住房具有两个方向的升级。
 
 | 升级方向     | LV1 | LV2 | LV3 | LV4 | LV5 |
-| ------------ | --- | --- | --- | --- | --- |
+| ------------ | :-: | :-: | :-: | :-: | :-: |
 | **工人人口** | +3  | +2  | +2  | +2  | +5  |
 | **军事人口** | +10 | +5  | +5  | +5  | +15 |
 
 不同升级的花销：
 
-| 升级方向     | LV1         | LV2        | LV3        | LV4        | LV5         |
-| ------------ | ----------- | ---------- | ---------- | ---------- | ----------- |
+| 升级方向     |     LV1     |    LV2     |    LV3     |    LV4     |     LV5     |
+| ------------ | :---------: | :--------: | :--------: | :--------: | :---------: |
 | **工人人口** | (5金 + 10s) | (2金 + 5s) | (2金 + 5s) | (2金 + 5s) | (5金 + 15s) |
-| **军事人口** | (5金 + 10s) | (2金 + 5s) | (2金 + 5s) | (2金 + 5s) | (5金 + 15s) |
+| **军事人口** |      ^      | (2金 + 5s) | (2金 + 5s) | (2金 + 5s) | (5金 + 15s) |
 
 升级能提供的基本数值属性增益：
-| 升级方向     | LV1 | LV2      | LV3      | LV4      | LV5      |
-| ------------ | --- | -------- | -------- | -------- | -------- |
+| 升级方向     | LV1 |   LV2    |   LV3    |   LV4    |   LV5    |
+| ------------ | :-: | :------: | :------: | :------: | :------: |
 | **工人人口** | --  | + 10% HP | + 10% HP | + 10% HP | + 13% HP |
-| **军事人口** | ^  | + 10% HP | + 10% HP | + 10% HP | + 13% HP |
+| **军事人口** |  ^  | + 10% HP | + 10% HP | + 10% HP | + 13% HP |
+
+|***
+
+### 铁匠铺
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        sgy[手工业]:::target;
+        sgy --> zz[铸造]:::notmain---> yj[冶金]:::notmain;
+        sgy --> szj[锁子甲]:::notmain---> bj[板甲]:::notmain;
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>手工业</tech>。
+
+玩家可以在铁匠铺中升级全场单位的攻击力或防御力。
+
+!!! warning 注意
+    铁匠铺的升级不是科技，与其他建筑一样，当铁匠铺被摧毁后，其提供的所有增益效果将全部消失。
+
+#### 升级
+
+铁匠铺具有两个方向的升级。
+
+| 升级方向   | LV1  | LV2 | LV3 |
+| ---------- | :--: | :-: | :-: |
+| **攻击力** | +10% | +5% | +5% |
+| **防御力** | +10% | +5% | +5% |
+
+不同升级的花销：
+
+| 升级方向   |     LV1     |     LV2     |     LV3     |
+| ---------- | :---------: | :---------: | :---------: |
+| **攻击力** | (8金 + 20s) | (4金 + 10s) | (4金 + 10s) |
+| **防御力** |      ^     | (4金 + 10s) | (4金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向   | LV1 |     LV2      |     LV3      |
+| ---------- | :-: | :----------: | :----------: |
+| **攻击力** | --  |   + 10% HP   |   + 10% HP   |
+| **防御力** |  ^  | + 10% 防御力 | + 10% 防御力 |
+
+
+|***
 
 ### 仓库
 
@@ -117,6 +166,7 @@ print_background: true
     classDef notmain fill:#d1d1d1, stroke:#707070;
     classDef target fill:#fad866, stroke:#c16b1f;
     ```
+    需要研发科技<tech>行政机构</tech>。
 
 工人可以在采集完成后将物资直接送到仓库进行卸货，而不需要返回基地。
 
@@ -135,18 +185,18 @@ print_background: true
 
 仓库只有一个方向的升级。
 
-| 升级方向     | LV1 | LV2   | LV3   | LV4   | LV5 |
-| ------------ | --- | ----- | ----- | ----- | --- |
+| 升级方向     | LV1 |  LV2  |  LV3  |  LV4  | LV5 |
+| ------------ | :-: | :---: | :---: | :---: | :-: |
 | **卸货速度** | --  | -2.5% | -2.5% | -2.5% | -5% |
 
 不同升级的花销：
 
-| 升级方向     | LV1         | LV2        | LV3        | LV4        | LV5         |
-| ------------ | ----------- | ---------- | ---------- | ---------- | ----------- |
+| 升级方向     |     LV1     |    LV2     |    LV3     |    LV4     |     LV5     |
+| ------------ | :---------: | :--------: | :--------: | :--------: | :---------: |
 | **卸货速度** | (6金 + 10s) | (2金 + 5s) | (2金 + 5s) | (2金 + 5s) | (2金 + 10s) |
 
 升级能提供的基本数值属性增益：
-| 升级方向     | LV1 | LV2      | LV3      | LV4      | LV5               |
-| ------------ | --- | -------- | -------- | -------- | ----------------- |
+| 升级方向     | LV1 |   LV2    |   LV3    |   LV4    |        LV5        |
+| ------------ | :-: | :------: | :------: | :------: | :---------------: |
 | **卸货速度** | --  | + 10% HP | + 10% HP | + 10% HP | + 5% 防御力 +5%HP |
 
