--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -4,25 +4,29 @@ print_background: true
 
 ---
 @import "my-style.less"
+***
 [TOC]
+***
+
 # 建筑
 
 ## 总览表
 
-| 建筑名称   | 建筑造价 | 建筑耗时 | 建造条件                      | 建筑功能                                         | 是否可升级 |
-| ---------- | -------- | -------- | ----------------------------- | ------------------------------------------------ | ---------- |
-| **住房**   | 5金      | 10s      | 无                            | 提高人口上限                                     | 是         |
-| **铁匠铺** | 10金     | 15s      | 研发科技<tech>手工业</tech>   | 提高单位攻击力、防御力                           | 是         |
-| **仓库**   | 20金     | 15s      | 研发科技<tech>行政机构</tech> | 缩短采集路程                                     | 是         |
-| **农庄**   | 30金     | 25s      | 研发科技<tech>农学</tech>     | 每过一段时间生成一定的食物                       | 是         |
-| **矿场**   | 30金     | 30s      | 研发科技<tech>矿井勘探</tech> | 每过一段时间生成一定的黄金                       | 是         |
-| **兵营**   | 20金     | 15s      | 研发科技<tech>军功制</tech>   | 为步兵系单位生产提供增益                         | 是         |
-| **靶场**   | 20金     | 15s      | 研发科技<tech>复合弓</tech>   | 为弓弩系单位生产提供增益                         | 是         |
-| **马厩**   | 20金     | 15s      | 研发科技<tech>马匹育种</tech> | 为骑兵系单位生产提供增益                         | 是         |
-| **兵工厂** | 20金     | 15s      | 研发科技<tech>军事技术</tech> | 为攻城武器系与火药系单位生产提供增益             | 是         |
-| **学院**   | 20金     | 15s      | 研发科技<tech>教育</tech>     | 为科技研发提供增益                               | 是         |
-| **拒马**   | 5金      | 8s       | 研发科技<tech>军事工程</tech> | 吸引火力，阻挡敌方进攻。                         | 是         |
-| **驻防点** | 5金      | 8s       | 研发科技<tech>复合弓</tech>   | 弓弩系单位与火药系单位可以驻扎在驻防点进行射击。 | 是         |
+|  建筑名称  | 建筑功能                                     | 是否可升级 |
+| :--------: | -------------------------------------------- | :--------: |
+|  **住房**  | 提高人口上限                                 |     是     |
+| **铁匠铺** | 提高单位攻击力、防御力                       |     是     |
+|  **仓库**  | 缩短采集路程                                 |     是     |
+|  **农庄**  | 每过一段时间生成一定的食物                   |     是     |
+|  **矿场**  | 每过一段时间生成一定的黄金                   |     是     |
+|  **兵营**  | 为步兵系单位提供增益                         |     是     |
+|  **靶场**  | 为弓弩系单位提供增益                         |     是     |
+|  **马厩**  | 为骑兵系单位提供增益                         |     是     |
+| **兵工厂** | 为攻城武器系与火药系单位生产提供增益         |     是     |
+|  **学院**  | 为科技研发提供增益                           |     是     |
+|  **市场**  | 为资源互换提供增益                           |     是     |
+|  **拒马**  | 吸引火力，阻挡敌方进攻。                     |     是     |
+| **驻防点** | 弓弩系单位与火药系单位可以驻扎于此进行射击。 |     是     |
 
 ***
 
@@ -48,7 +52,7 @@ print_background: true
 ### 建筑修理
 
 当建筑的HP不为满格时，玩家使建筑进入修复状态。  
-在建筑进入修复状态时，其每过$s_{k}$时间，就会增长$h_{k}$点HP，同时耗费$c_{k}$点**食物**。其中，$h_{k}$与生产力有关。  
+在建筑进入修复状态时，其每过$s_{i}$时间，就会增长$h_{i}$点HP，同时耗费$c_{i}$点**食物**。其中，$h_{i}$与生产力有关。  
 建筑HP回满时，建筑自动退出修复状态，玩家也可以手动选择退出修复状态。
 
 !!! warning 注意
@@ -137,7 +141,7 @@ m`军事类建筑`
 | 升级方向   |     LV1     |     LV2     |     LV3     |
 | ---------- | :---------: | :---------: | :---------: |
 | **攻击力** | (8金 + 20s) | (4金 + 10s) | (4金 + 10s) |
-| **防御力** |      ^     | (4金 + 10s) | (4金 + 10s) |
+| **防御力** |      ^      | (4金 + 10s) | (4金 + 10s) |
 
 升级能提供的基本数值属性增益：
 | 升级方向   | LV1 |     LV2      |     LV3      |
@@ -160,9 +164,11 @@ m`军事类建筑`
         A --> C[采矿]:::notmain;
         D --> E[农学]:::notmain;
         C --> I[矿井勘探]:::notmain;
-        B --> E ---> d0((...)):::notmain;
-        B --> J[教育]:::notmain---> d1((...)):::notmain;
-        B --> I---> d2((...)):::notmain;
+        B --> E ---> d0[历法]:::notmain;
+        B --> J[教育]:::notmain---> d1[经济]:::notmain;
+        d1 --> K[工程技术]:::notmain
+        d1 --> L[交通运输]:::notmain
+        B --> I---> d2[化学]:::notmain;
     classDef notmain fill:#d1d1d1, stroke:#707070;
     classDef target fill:#fad866, stroke:#c16b1f;
     ```
@@ -185,18 +191,331 @@ m`军事类建筑`
 
 仓库只有一个方向的升级。
 
-| 升级方向     | LV1 |  LV2  |  LV3  |  LV4  | LV5 |
-| ------------ | :-: | :---: | :---: | :---: | :-: |
-| **卸货速度** | --  | -2.5% | -2.5% | -2.5% | -5% |
+| 升级方向     | LV1 |  LV2  |  LV3  |
+| ------------ | :-: | :---: | :---: |
+| **卸货速度** | --  | -2.5% | -2.5% |
 
 不同升级的花销：
 
-| 升级方向     |     LV1     |    LV2     |    LV3     |    LV4     |     LV5     |
-| ------------ | :---------: | :--------: | :--------: | :--------: | :---------: |
-| **卸货速度** | (6金 + 10s) | (2金 + 5s) | (2金 + 5s) | (2金 + 5s) | (2金 + 10s) |
+| 升级方向     |     LV1     |    LV2     |    LV3     |
+| ------------ | :---------: | :--------: | :--------: |
+| **卸货速度** | (6金 + 10s) | (2金 + 5s) | (2金 + 5s) |
 
 升级能提供的基本数值属性增益：
-| 升级方向     | LV1 |   LV2    |   LV3    |   LV4    |        LV5        |
-| ------------ | :-: | :------: | :------: | :------: | :---------------: |
-| **卸货速度** | --  | + 10% HP | + 10% HP | + 10% HP | + 5% 防御力 +5%HP |
+| 升级方向     | LV1 |   LV2    |   LV3    |
+| ------------ | :-: | :------: | :------: |
+| **卸货速度** | --  | + 10% HP | + 10% HP |
 
+|***
+
+### 农庄
+
+`经济类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        A[手推车] --> D[水利];
+        A --> B["行政机构"];
+        A --> C[采矿]:::notmain;
+        D --> E[农学]:::target;
+        C --> I[矿井勘探]:::notmain;
+        B --> E ---> d0[历法]:::notmain;
+        B --> J[教育]:::notmain---> d1[经济]:::notmain;
+        d1 --> K[工程技术]:::notmain
+        d1 --> L[交通运输]:::notmain
+        B --> I---> d2[化学]:::notmain;
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>农学</tech>。
+
+农庄建成后，其每过$t_{i}$时间产生$p_{i}$点食物，其中$p_{i}=k_{i}\cdot {productivity}$（$k_{i}$为转化率，${productivity}$ 为生产力）。
+
+#### 升级
+
+农庄有两个方向的升级。
+
+| 升级方向     | LV1 | LV2  | LV3  |
+| ------------ | :-: | :--: | :--: |
+| **转化率**   | --  | +10% | +10% |
+| **产出时间** |  ^  | -30% | -30% |
+
+不同升级的花销：
+
+| 升级方向     |     LV1      |     LV2     |     LV3     |
+| ------------ | :----------: | :---------: | :---------: |
+| **转化率**   | (10金 + 15s) | (5金 + 10s) | (5金 + 10s) |
+| **产出时间** |      ^       | (5金 + 10s) | (5金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向     | LV1 |  LV2   |  LV3   |
+| ------------ | :-: | :----: | :----: |
+| **转化率**   | --  | +30%HP | +10%HP |
+| **产出时间** |  ^  | +30%HP | +10%HP |
+
+|***
+
+### 矿场
+
+`经济类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        A[手推车] --> D[水利]:::notmain;
+        A --> B["行政机构"];
+        A --> C[采矿];
+        D --> E[农学]:::notmain;
+        C --> I[矿井勘探]:::target;
+        B --> E ---> d0[历法]:::notmain;
+        B --> J[教育]:::notmain---> d1[经济]:::notmain;
+        d1 --> K[工程技术]:::notmain
+        d1 --> L[交通运输]:::notmain
+        B --> I---> d2[化学]:::notmain;
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>矿井勘探</tech>。
+
+农庄建成后，其每过$t_{i}$时间产生$p_{i}$点食物，其中$p_{i}=k_{i}\cdot {productivity}$（$k_{i}$为转化率，${productivity}$ 为生产力）。
+
+#### 升级
+
+矿场有两个方向的升级。
+
+| 升级方向     | LV1 | LV2  | LV3  |
+| ------------ | :-: | :--: | :--: |
+| **转化率**   | --  | +10% | +10% |
+| **产出时间** |  ^  | -30% | -30% |
+
+不同升级的花销：
+
+| 升级方向     |     LV1      |     LV2     |     LV3     |
+| ------------ | :----------: | :---------: | :---------: |
+| **转化率**   | (10金 + 15s) | (5金 + 10s) | (5金 + 10s) |
+| **产出时间** |      ^       | (5金 + 10s) | (5金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向     | LV1 |  LV2   |  LV3   |
+| ------------ | :-: | :----: | :----: |
+| **转化率**   | --  | +30%HP | +10%HP |
+| **产出时间** |  ^  | +30%HP | +10%HP |
+
+|***
+
+### 兵营
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        jsxl[军事训练] ---> zs[战术]:::notmain;
+        jsxl ---> jgz[军功制]:::target;
+        zs ---> md[马镫]:::notmain;
+        zs ---> yy[医药]:::notmain;
+        zs ---> fhg[复合弓]:::notmain;
+        md ---> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
+        md ---> mpyz[马匹育种]:::notmain;
+        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
+        gcqx ---> jsjs[军事技术]:::notmain;
+
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>军功制</tech>。
+
+兵营建成后，可以为步兵系单位提供增益。
+
+!!! warning 注意
+    兵营的升级不是科技，与其他建筑一样，当兵营被摧毁后，其提供的所有增益效果将全部消失。
+
+#### 升级
+
+兵营有三个方向的升级。
+
+| 升级方向       | LV1  | LV2  | LV3  |
+| -------------- | :--: | :--: | :--: |
+| **防御力**     | +20% | +10% | +10% |
+| **预备役规模** | +20% | +10% | +10% |
+| **生产速度**   | -10% | -5%  | -5%  |
+
+不同升级的花销：
+
+| 升级方向       |     LV1      |      LV2      |     LV3      |
+| -------------- | :----------: | :-----------: | :----------: |
+| **防御力**     | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
+| **预备役规模** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **生产速度**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向       | LV1 |  LV2   |  LV3   |
+| -------------- | :-: | :----: | :----: |
+| **防御力**     | --  | +30%HP | +15%HP |
+| **预备役规模** |  ^  | +30%HP | +15%HP |
+| **生产速度**   |  ^  | +30%HP | +15%HP |
+
+|***
+
+### 靶场
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        jsxl[军事训练] ---> zs[战术];
+        jsxl ---> jgz[军功制]:::notmain;
+        zs ---> md[马镫]:::notmain;
+        zs ---> yy[医药]:::notmain;
+        zs ---> fhg[复合弓]:::target;
+        md ---> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
+        md ---> mpyz[马匹育种]:::notmain;
+        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
+        gcqx ---> jsjs[军事技术]:::notmain;
+
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>复合弓</tech>。
+
+靶场建成后，可以为弓弩系单位提供增益。
+
+!!! warning 注意
+    靶场的升级不是科技，与其他建筑一样，当靶场被摧毁后，其提供的所有增益效果将全部消失。
+
+#### 升级
+
+靶场有三个方向的升级。
+
+| 升级方向     | LV1  | LV2  | LV3  |
+| ------------ | :--: | :--: | :--: |
+| **移动速度** | +20% | +10% | +10% |
+| **射击精准** | +20% | +10% | +10% |
+| **攻击力**   | +10% | +5%  | +5%  |
+
+不同升级的花销：
+
+| 升级方向     |     LV1      |      LV2      |     LV3      |
+| ------------ | :----------: | :-----------: | :----------: |
+| **移动速度** | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
+| **射击精准** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **攻击力**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向     | LV1 |  LV2   |  LV3   |
+| ------------ | :-: | :----: | :----: |
+| **移动速度** | --  | +30%HP | +15%HP |
+| **射击精准** |  ^  | +20%HP | +15%HP |
+| **攻击力**   |  ^  | +10%HP | +10%HP |
+
+|***
+
+### 马厩
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        jsxl[军事训练] ---> zs[战术];
+        jsxl ---> jgz[军功制]:::notmain;
+        zs ---> md[马镫];
+        zs ---> yy[医药]:::notmain;
+        zs ---> fhg[复合弓]:::notmain;
+        md ---> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
+        md ---> mpyz[马匹育种]:::target;
+        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
+        gcqx ---> jsjs[军事技术]:::notmain;
+
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>马匹育种</tech>。
+
+马厩建成后，可以为骑兵系单位提供增益。
+
+!!! warning 注意
+    马厩的升级不是科技，与其他建筑一样，当马厩被摧毁后，其提供的所有增益效果将全部消失。
+
+#### 升级
+
+马厩有三个方向的升级。
+
+| 升级方向     | LV1  | LV2  | LV3  |
+| ------------ | :--: | :--: | :--: |
+| **移动速度** | +20% | +10% | +10% |
+| **攻击间隔** | +20% | +10% | +10% |
+| **造价**     | -10% | -5%  | -5%  |
+
+不同升级的花销：
+
+| 升级方向     |     LV1      |      LV2      |     LV3      |
+| ------------ | :----------: | :-----------: | :----------: |
+| **移动速度** | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
+| **射击精准** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **造价**     |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向     | LV1 |  LV2   |  LV3   |
+| ------------ | :-: | :----: | :----: |
+| **移动速度** | --  | +30%HP | +15%HP |
+| **射击精准** |  ^  | +20%HP | +15%HP |
+| **造价**     |  ^  | +10%HP | +10%HP |
+
+|***
+
+### 兵工厂
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        jsxl[军事训练] ---> zs[战术];
+        jsxl ---> jgz[军功制]:::notmain;
+        zs ---> md[马镫];
+        zs ---> yy[医药]:::notmain;
+        zs ---> fhg[复合弓]:::notmain;
+        md ---> jsgc[军事工程] ---> gcqx[攻城器械];
+        md ---> mpyz[马匹育种]:::notmain;
+        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
+        gcqx ---> jsjs[军事技术]:::target;
+
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>军事技术</tech>。
+
+兵工厂建成后，可以为攻城武器系与火药系单位提供增益。
+
+!!! warning 注意
+    兵工厂的升级不是科技，与其他建筑一样，当兵工厂被摧毁后，其提供的所有增益效果将全部消失。
+
+#### 升级
+
+兵工厂有三个方向的升级。
+
+| 升级方向     | LV1  | LV2  | LV3  |
+| ------------ | :--: | :--: | :--: |
+| **攻击力**   | +20% | +10% | +10% |
+| **攻击间隔** | -20% | -10% | -10% |
+| **精准度**   | +10% | +5%  | +5%  |
+
+不同升级的花销：
+
+| 升级方向     |     LV1      |      LV2      |     LV3      |
+| ------------ | :----------: | :-----------: | :----------: |
+| **攻击力**   | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
+| **攻击间隔** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **精准度**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向     | LV1 |  LV2   |  LV3   |
+| ------------ | :-: | :----: | :----: |
+| **攻击力**   | --  | +30%HP | +15%HP |
+| **攻击间隔** |  ^  | +20%HP | +15%HP |
+| **精准度**   |  ^  | +10%HP | +10%HP |
+
+|***
