--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -59,7 +59,7 @@ print_background: true
     若建筑在修复时玩家食物耗尽，建筑将不会回复HP，但其仍然将保持修复状态；这种“停滞”的修复状态直到食物重新满足需求才能恢复正常。
 
 !!! tip 提示
-    玩家可以通过对处于修复状态的建筑进行长期骚扰拖垮对方的经济。   
+    玩家可以通过对处于修复状态的建筑进行长期骚扰扰乱对方的经济。   
 
 ### 建筑升级
 
@@ -73,6 +73,22 @@ print_background: true
 
 ***
 
+### 建筑拆除
+
+玩家可以拆除自己已经建成或正在修建的建筑。  
+拆除建筑时，根据建筑的当前HP，玩家将得到相应的补偿$C$。$C$满足：$$C=\dfrac{{hp}_{cur}}{{hp}_{max}}\cdot k_{c}\cdot p_{c}$$  
+其中$k_{c}$为补偿系数，$p_{c}$为建筑累计造价，$p_{c}=\sum ^{n}_{i}p_{i}$(各等级造价之和，且LV.1只计入一次)。
+
+!!! example 示例
+    假设玩家拆除一栋**LV.2 工人人口** + **LV.3 军事人口**的**住房**，住房的当前HP为50，HP上限为100，住房的造价为$p_{1}$，升级LV.2 工人人口的价格为$p_{i2}$，升级LV.2 军事人口的造价为$p_{j2}$，升级LV.3 军事人口的造价为$p_{j3}$，住房的拆除补偿系数为$0.4$,则$p_{c}=p_{1}+p_{i2}+p_{j2}+p_{j3}$，则补偿金额为$C = 0.4\times \dfrac{50}{100}\times p_{c}$
+
+!!! tip 提示
+    玩家及时拆除即将被摧毁建筑可以减少损失。   
+
+!!! warning 注意
+    只要建筑的HP不为满格状态，拆除建筑均视为被敌方摧毁。
+    
+
 ## 详细设计
 
 |***
@@ -83,7 +99,7 @@ print_background: true
 
 住房建成后，可以为玩家增加人口上限。
 
-#### 升级
+#### 升级 {ignore=true}
 
 住房具有两个方向的升级。
 
@@ -127,7 +143,7 @@ m`军事类建筑`
 !!! warning 注意
     铁匠铺的升级不是科技，与其他建筑一样，当铁匠铺被摧毁后，其提供的所有增益效果将全部消失。
 
-#### 升级
+#### 升级 {ignore=true}
 
 铁匠铺具有两个方向的升级。
 
@@ -187,7 +203,7 @@ m`军事类建筑`
     当一条路上建有多个仓库时，工人只认最新建成的仓库。  
     仓库被摧毁后，工人会将资源卸载至该仓库建成前的资源卸载点。
 
-#### 升级
+#### 升级 {ignore=true}
 
 仓库只有一个方向的升级。
 
@@ -230,9 +246,9 @@ m`军事类建筑`
     ```
     需要研发科技<tech>农学</tech>。
 
-农庄建成后，其每过$t_{i}$时间产生$p_{i}$点食物，其中$p_{i}=k_{i}\cdot {productivity}$（$k_{i}$为转化率，${productivity}$ 为生产力）。
+农庄建成后，其每过$t_{i}$时间产生$f_{i}$点食物，其中$f_{i}=k_{i}\cdot p_{i}$（$k_{i}$为转化率，$p_{i}$ 为生产力）。
 
-#### 升级
+#### 升级 {ignore=true}
 
 农庄有两个方向的升级。
 
@@ -280,7 +296,7 @@ m`军事类建筑`
 
 农庄建成后，其每过$t_{i}$时间产生$p_{i}$点食物，其中$p_{i}=k_{i}\cdot {productivity}$（$k_{i}$为转化率，${productivity}$ 为生产力）。
 
-#### 升级
+#### 升级 {ignore=true}
 
 矿场有两个方向的升级。
 
@@ -311,27 +327,35 @@ m`军事类建筑`
 !!! note 解锁路线
     ``` mermaid
     flowchart LR
-        jsxl[军事训练] ---> zs[战术]:::notmain;
-        jsxl ---> jgz[军功制]:::target;
-        zs ---> md[马镫]:::notmain;
-        zs ---> yy[医药]:::notmain;
-        zs ---> fhg[复合弓]:::notmain;
-        md ---> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
-        md ---> mpyz[马匹育种]:::notmain;
-        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
-        gcqx ---> jsjs[军事技术]:::notmain;
+        jsxl[军事训练] --> zs[战术]:::notmain;
+        jsxl --> jgz[军功制]:::target;
+        zs --> md[马镫]:::notmain;
+        zs --> yy[医药]:::notmain;
+        zs --> fhg[复合弓]:::notmain;
+        md --> jsgc[军事工程]:::notmain --> gcqx[攻城器械]:::notmain;
+        md --> mpyz[马匹育种]:::notmain;
+        gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
+        gcqx --> jsjs[军事技术]:::notmain;
 
     classDef notmain fill:#d1d1d1, stroke:#707070;
     classDef target fill:#fad866, stroke:#c16b1f;
     ```
     需要研发科技<tech>军功制</tech>。
 
-兵营建成后，可以为步兵系单位提供增益。
+兵营建成后，可以为步兵系单位提供增益。  
+建成后的基础增益包括：  
+
+1. 步兵系单位**攻击力+10%**。
+2. 步兵系单位**防御力+20%**。
+3. 步兵系单位**预备役规模+20%**。
+4. 步兵系单位**造价-10%**。
+5. 步兵系单位**补给要求-10%**。
+6. 步兵系单位**提供的生产力+10%**。
 
 !!! warning 注意
     兵营的升级不是科技，与其他建筑一样，当兵营被摧毁后，其提供的所有增益效果将全部消失。
 
-#### 升级
+#### 升级 {ignore=true}
 
 兵营有三个方向的升级。
 
@@ -339,22 +363,22 @@ m`军事类建筑`
 | -------------- | :--: | :--: | :--: |
 | **防御力**     | +20% | +10% | +10% |
 | **预备役规模** | +20% | +10% | +10% |
-| **生产速度**   | -10% | -5%  | -5%  |
+| **生产时间**   | -10% | -5%  | -5%  |
 
 不同升级的花销：
 
 | 升级方向       |     LV1      |      LV2      |     LV3      |
 | -------------- | :----------: | :-----------: | :----------: |
-| **防御力**     | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
+| **防御力**     | (16金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
 | **预备役规模** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
-| **生产速度**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **生产时间**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 
 升级能提供的基本数值属性增益：
 | 升级方向       | LV1 |  LV2   |  LV3   |
 | -------------- | :-: | :----: | :----: |
 | **防御力**     | --  | +30%HP | +15%HP |
 | **预备役规模** |  ^  | +30%HP | +15%HP |
-| **生产速度**   |  ^  | +30%HP | +15%HP |
+| **生产时间**   |  ^  | +30%HP | +15%HP |
 
 |***
 
@@ -365,34 +389,42 @@ m`军事类建筑`
 !!! note 解锁路线
     ``` mermaid
     flowchart LR
-        jsxl[军事训练] ---> zs[战术];
-        jsxl ---> jgz[军功制]:::notmain;
-        zs ---> md[马镫]:::notmain;
-        zs ---> yy[医药]:::notmain;
-        zs ---> fhg[复合弓]:::target;
-        md ---> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
-        md ---> mpyz[马匹育种]:::notmain;
-        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
-        gcqx ---> jsjs[军事技术]:::notmain;
+        jsxl[军事训练] --> zs[战术];
+        jsxl --> jgz[军功制]:::notmain;
+        zs --> md[马镫]:::notmain;
+        zs --> yy[医药]:::notmain;
+        zs --> fhg[复合弓]:::target;
+        md --> jsgc[军事工程]:::notmain --> gcqx[攻城器械]:::notmain;
+        md --> mpyz[马匹育种]:::notmain;
+        gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
+        gcqx --> jsjs[军事技术]:::notmain;
 
     classDef notmain fill:#d1d1d1, stroke:#707070;
     classDef target fill:#fad866, stroke:#c16b1f;
     ```
     需要研发科技<tech>复合弓</tech>。
 
-靶场建成后，可以为弓弩系单位提供增益。
+靶场建成后，可以为弓弩系单位提供增益。  
+建成后的基础增益包括：  
+
+1. 弓弩系单位**攻击力+10%**。
+2. 弓弩系单位**移动速度+20%**。
+3. 弓弩系单位**精准度+20%**。
+4. 弓弩系单位**防御力+5%**。
+5. 弓弩系单位**造价-10%**。
+6. 弓弩系单位命中目标时，将对目标造成持续**30%攻击间隔时间的-20%移动速度**效果。
 
 !!! warning 注意
     靶场的升级不是科技，与其他建筑一样，当靶场被摧毁后，其提供的所有增益效果将全部消失。
 
-#### 升级
+#### 升级 {ignore=true}
 
 靶场有三个方向的升级。
 
 | 升级方向     | LV1  | LV2  | LV3  |
 | ------------ | :--: | :--: | :--: |
 | **移动速度** | +20% | +10% | +10% |
-| **射击精准** | +20% | +10% | +10% |
+| **精准度**   | +20% | +10% | +10% |
 | **攻击力**   | +10% | +5%  | +5%  |
 
 不同升级的花销：
@@ -400,7 +432,7 @@ m`军事类建筑`
 | 升级方向     |     LV1      |      LV2      |     LV3      |
 | ------------ | :----------: | :-----------: | :----------: |
 | **移动速度** | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
-| **射击精准** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **精准度**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 | **攻击力**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 
 升级能提供的基本数值属性增益：
@@ -419,34 +451,42 @@ m`军事类建筑`
 !!! note 解锁路线
     ``` mermaid
     flowchart LR
-        jsxl[军事训练] ---> zs[战术];
-        jsxl ---> jgz[军功制]:::notmain;
-        zs ---> md[马镫];
-        zs ---> yy[医药]:::notmain;
-        zs ---> fhg[复合弓]:::notmain;
-        md ---> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
-        md ---> mpyz[马匹育种]:::target;
-        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
-        gcqx ---> jsjs[军事技术]:::notmain;
+        jsxl[军事训练] --> zs[战术];
+        jsxl --> jgz[军功制]:::notmain;
+        zs --> md[马镫];
+        zs --> yy[医药]:::notmain;
+        zs --> fhg[复合弓]:::notmain;
+        md --> jsgc[军事工程]:::notmain --> gcqx[攻城器械]:::notmain;
+        md --> mpyz[马匹育种]:::target;
+        gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
+        gcqx --> jsjs[军事技术]:::notmain;
 
     classDef notmain fill:#d1d1d1, stroke:#707070;
     classDef target fill:#fad866, stroke:#c16b1f;
     ```
     需要研发科技<tech>马匹育种</tech>。
 
-马厩建成后，可以为骑兵系单位提供增益。
+马厩建成后，可以为骑兵系单位提供增益。  
+建成后的基础增益包括：  
+
+1. 骑兵系单位**攻击力+10%**。
+2. 骑兵系单位**移动速度+20%**。
+3. 骑兵系单位**造价-10%**。
+4. 骑兵系单位**预备役规模+10%**。
+5. 骑兵系单位**对弓箭手伤害+20%**。
+6. 若骑兵系单位接触敌人时速度不低于其最大速度的75%，将立即对敌人造成**110%的攻击伤害**。
 
 !!! warning 注意
     马厩的升级不是科技，与其他建筑一样，当马厩被摧毁后，其提供的所有增益效果将全部消失。
 
-#### 升级
+#### 升级 {ignore=true}
 
 马厩有三个方向的升级。
 
 | 升级方向     | LV1  | LV2  | LV3  |
 | ------------ | :--: | :--: | :--: |
 | **移动速度** | +20% | +10% | +10% |
-| **攻击间隔** | +20% | +10% | +10% |
+| **攻击间隔** | -20% | -10% | -10% |
 | **造价**     | -10% | -5%  | -5%  |
 
 不同升级的花销：
@@ -454,14 +494,14 @@ m`军事类建筑`
 | 升级方向     |     LV1      |      LV2      |     LV3      |
 | ------------ | :----------: | :-----------: | :----------: |
 | **移动速度** | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
-| **射击精准** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **攻击间隔** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 | **造价**     |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 
 升级能提供的基本数值属性增益：
 | 升级方向     | LV1 |  LV2   |  LV3   |
 | ------------ | :-: | :----: | :----: |
 | **移动速度** | --  | +30%HP | +15%HP |
-| **射击精准** |  ^  | +20%HP | +15%HP |
+| **攻击间隔** |  ^  | +20%HP | +15%HP |
 | **造价**     |  ^  | +10%HP | +10%HP |
 
 |***
@@ -473,27 +513,35 @@ m`军事类建筑`
 !!! note 解锁路线
     ``` mermaid
     flowchart LR
-        jsxl[军事训练] ---> zs[战术];
-        jsxl ---> jgz[军功制]:::notmain;
-        zs ---> md[马镫];
-        zs ---> yy[医药]:::notmain;
-        zs ---> fhg[复合弓]:::notmain;
-        md ---> jsgc[军事工程] ---> gcqx[攻城器械];
-        md ---> mpyz[马匹育种]:::notmain;
-        gcqx ---> hy[火药]:::notmain ---> hp[火炮]:::notmain;
-        gcqx ---> jsjs[军事技术]:::target;
+        jsxl[军事训练] --> zs[战术];
+        jsxl --> jgz[军功制]:::notmain;
+        zs --> md[马镫];
+        zs --> yy[医药]:::notmain;
+        zs --> fhg[复合弓]:::notmain;
+        md --> jsgc[军事工程] ---> gcqx[攻城器械];
+        md --> mpyz[马匹育种]:::notmain;
+        gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
+        gcqx --> jsjs[军事技术]:::target;
 
     classDef notmain fill:#d1d1d1, stroke:#707070;
     classDef target fill:#fad866, stroke:#c16b1f;
     ```
     需要研发科技<tech>军事技术</tech>。
 
-兵工厂建成后，可以为攻城武器系与火药系单位提供增益。
+兵工厂建成后，可以为攻城武器系与火药系单位提供增益。  
+建成后的基础增益包括：  
+
+1. 攻城武器系与火药系单位**攻击力+20%**。
+2. 攻城武器系与火药系单位**精准度+10%**。
+3. 攻城武器系与火药系单位**造价-10%**。
+4. 攻城武器系与火药系单位**生产时间-15%**。
+5. 当有不少于三名火药系单位集群战斗时，他们的**精准度+50%**。
+6. 在攻城武器系单位附近的步兵系单位**攻击力+30%**。
 
 !!! warning 注意
     兵工厂的升级不是科技，与其他建筑一样，当兵工厂被摧毁后，其提供的所有增益效果将全部消失。
 
-#### 升级
+#### 升级 {ignore=true}
 
 兵工厂有三个方向的升级。
 
@@ -507,7 +555,7 @@ m`军事类建筑`
 
 | 升级方向     |     LV1      |      LV2      |     LV3      |
 | ------------ | :----------: | :-----------: | :----------: |
-| **攻击力**   | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
+| **攻击力**   | (25金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
 | **攻击间隔** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 | **精准度**   |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 
@@ -517,5 +565,221 @@ m`军事类建筑`
 | **攻击力**   | --  | +30%HP | +15%HP |
 | **攻击间隔** |  ^  | +20%HP | +15%HP |
 | **精准度**   |  ^  | +10%HP | +10%HP |
+
+|***
+
+### 学院
+
+`经济类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        A[手推车] --> D[水利]:::notmain;
+        A --> B["行政机构"];
+        A --> C[采矿]:::notmain;
+        D --> E[农学]:::notmain;
+        C --> I[矿井勘探]:::notmain;
+        B --> E ---> d0[历法]:::notmain;
+        B --> J[教育]:::target---> d1[经济]:::notmain;
+        d1 --> K[工程技术]:::notmain
+        d1 --> L[交通运输]:::notmain
+        B --> I---> d2[化学]:::notmain;
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>教育</tech>。
+
+学院建成后，可以为科技研发提供增益效果，包括：
+
+1. 生产力能够提供更大的科技研究速率。
+2. 当玩家有处于研发状态的科技时，玩家的生产力+20%。
+3. 当玩家将科技树上所有科技研发完毕时，玩家的生产力+30%。
+
+!!! tip 提示
+    学院的功能服务于科技研发，若玩家已不再需要研发科技时，可以考虑将其拆除。
+
+#### 升级 {ignore=true}
+
+学院有两个方向的升级。
+
+| 升级方向     | LV1  | LV2  | LV3  |
+| ------------ | :--: | :--: | :--: |
+| **研究速度** | +20% | +10% | +10% |
+| **科技造价** | -20% | -10% | -10% |
+
+不同升级的花销：
+
+| 升级方向     |     LV1      |    LV2     |    LV3     |
+| ------------ | :----------: | :--------: | :--------: |
+| **研究速度** | (12金 + 10s) | (5金 + 7s) | (5金 + 7s) |
+| **科技造价** |      ^       | (5金 + 7s) | (5金 + 7s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向     | LV1 |  LV2   |  LV3  |
+| ------------ | :-: | :----: | :---: |
+| **研究速度** | --  | +10%HP | +5%HP |
+| **科技造价** |  ^  | +10%HP | +5%HP |
+
+|***
+
+### 市场
+
+`经济类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        A[手推车] --> D[水利]:::notmain;
+        A --> B["行政机构"];
+        A --> C[采矿]:::notmain;
+        D --> E[农学]:::notmain;
+        C --> I[矿井勘探]:::notmain;
+        B --> E ---> d0[历法]:::notmain;
+        B --> J[教育]---> d1[经济]:::target;
+        d1 --> K[工程技术]:::notmain
+        d1 --> L[交通运输]:::notmain
+        B --> I---> d2[化学]:::notmain;
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>经济</tech>。
+
+市场建成后，可以为资源互换增益效果，包括：
+
+1. 食物、黄金两种资源互换的**税率更低**。
+2. 黄金能产生其数量**10%的生产力**。
+3. 工人**采集食物的耗时-20%**。
+
+
+#### 升级 {ignore=true}
+
+市场只有一个方向的升级。
+
+| 升级方向 | LV1  | LV2  |   LV3    |
+| -------- | :--: | :--: | :------: |
+| **税率** | -50% | -50% | 无互换税 |
+
+不同升级的花销：
+
+| 升级方向 |     LV1      |    LV2     |    LV3     |
+| -------- | :----------: | :--------: | :--------: |
+| **税率** | (12金 + 10s) | (5金 + 7s) | (5金 + 7s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向 | LV1 |  LV2   |  LV3   |
+| -------- | :-: | :----: | :----: |
+| **税率** | --  | +20%HP | +20%HP |
+
+|***
+
+### 拒马
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        jsxl[军事训练] --> zs[战术];
+        jsxl --> jgz[军功制]:::notmain;
+        zs --> md[马镫];
+        zs --> yy[医药]:::notmain;
+        zs --> fhg[复合弓]:::notmain;
+        md --> jsgc[军事工程]:::target ---> gcqx[攻城器械]:::notmain;
+        md --> mpyz[马匹育种]:::notmain;
+        gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
+        gcqx --> jsjs[军事技术]:::notmain;
+
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>军事工程</tech>。
+
+拒马建成后，可以吸引火力，阻挡敌人进攻。
+当对方骑兵系单位接触到拒马时，将受到持续性的伤害。
+
+!!! tip 提示
+    在所有建筑中，单位进攻拒马的优先级最高。
+
+#### 升级 {ignore=true}
+
+拒马有两个方向的升级。
+
+| 升级方向       | LV1 | LV2  | LV3  | LV4  | LV5  |
+| -------------- | :-: | :--: | :--: | :--: | :--: |
+| **对步兵抗性** |  -  | +10% | +10% | +10% | +10% |
+| **对骑兵抗性** |  ^  | +10% | +10% | +10% | +10% |
+
+不同升级的花销：
+
+| 升级方向       |     LV1     |    LV2     |    LV3     |    LV4     |    LV5     |
+| -------------- | :---------: | :--------: | :--------: | :--------: | :--------: |
+| **对步兵抗性** | (5金 + 10s) | (5金 + 5s) | (5金 + 5s) | (5金 + 5s) | (5金 + 5s) |
+| **对骑兵抗性** |      ^      | (5金 + 5s) | (5金 + 5s) | (5金 + 5s) | (5金 + 5s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向       | LV1 |    LV2     |    LV3     |    LV4     |    LV5     |
+| -------------- | :-: | :--------: | :--------: | :--------: | :--------: |
+| **对步兵抗性** | --  |   +50%HP   |   +30%HP   |   +30%HP   |   +30%HP   |
+| **对骑兵抗性** | --  | +20%防御力 | +20%防御力 | +20%防御力 | +20%防御力 |
+
+|***
+
+### 驻防点
+
+m`军事类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        jsxl[军事训练] --> zs[战术];
+        jsxl --> jgz[军功制]:::notmain;
+        zs --> md[马镫]:::notmain;
+        zs --> yy[医药]:::notmain;
+        zs --> fhg[复合弓]:::target;
+        md --> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
+        md --> mpyz[马匹育种]:::notmain;
+        gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
+        gcqx --> jsjs[军事技术]:::notmain;
+
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>复合弓</tech>。
+
+驻防点建成后，弓弩系与火药系单位可以驻扎于此，即位置固定不动，向进入攻击范围内的敌人射击。  
+没有被驻扎的驻防点称为**空闲驻防点**，单位只能驻扎在空闲驻防点，一个驻防点只能驻扎一个单位。  
+玩家无法直接指定哪个单位驻扎在驻防点，距离空闲驻防点最近的弓弩系或火药系单位会自动进入驻扎。  
+当驻扎点内驻扎的单位死亡后，驻防点将重新变回空闲驻防点。  
+进入驻扎点驻扎的单位将得到**攻击力、防御力、攻击范围、攻击速度**的增益效果。
+
+!!! tip 提示
+    - 因为距离驻防点最近的弓弩系或火药系单位会自动进驻驻防点，因此在向建设有驻防点的路派遣单位时，派出单位的顺序将变得更加重要。
+    - 敌方单位进攻驻防点时，需要先杀死驻扎在驻防点内的单位，再攻击驻防点建筑本身。
+
+#### 升级 {ignore=true}
+
+驻防点有三个方向的升级。
+
+| 升级方向             | LV1 | LV2  | LV3  | LV4  | LV5  |
+| -------------------- | :-: | :--: | :--: | :--: | :--: |
+| **进驻单位攻击力**   |  -  | +10% | +10% | +10% | +10% |
+| **进驻单位攻击范围** |  ^  | +10% | +10% | +10% | +10% |
+| **进驻单位防御力**   |  ^  | +10% | +10% | +10% | +10% |
+
+不同升级的花销：
+
+| 升级方向             |    LV1     |    LV2     |    LV3     |    LV4     |    LV5     |
+| -------------------- | :--------: | :--------: | :--------: | :--------: | :--------: |
+| **进驻单位攻击力**   | (3金 + 5s) | (2金 + 3s) | (2金 + 3s) | (2金 + 3s) | (2金 + 3s) |
+| **进驻单位攻击范围** |     ^      | (2金 + 3s) | (2金 + 3s) | (2金 + 3s) | (2金 + 3s) |
+| **进驻单位防御力**   |     ^      | (2金 + 3s) | (2金 + 3s) | (2金 + 3s) | (2金 + 3s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向             | LV1 |  LV2   |  LV3  |  LV4  |  LV5  |
+| -------------------- | :-: | :----: | :---: | :---: | :---: |
+| **进驻单位攻击力**   | --  | +30%HP | +5%HP | +5%HP | +5%HP |
+| **进驻单位攻击范围** | --  | +30%HP | +5%HP | +5%HP | +5%HP |
+| **进驻单位防御力**   | --  | +30%HP | +5%HP | +5%HP | +5%HP |
 
 |***
