--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -76,7 +76,7 @@ print_background: true
 ### 建筑拆除
 
 玩家可以拆除自己已经建成或正在修建的建筑。  
-拆除建筑时，根据建筑的当前HP，玩家将得到相应的补偿$C$。$C$满足：$$C=\dfrac{{hp}_{cur}}{{hp}_{max}}\cdot k_{c}\cdot p_{c}$$  
+拆除建筑时，根据建筑的当前HP，玩家将得到相应的补偿$C$。$C$满足：$$C=\dfrac{{h}_{cur}}{{h}_{max}}\cdot k_{c}\cdot p_{c}$$  
 其中$k_{c}$为补偿系数，$p_{c}$为建筑累计造价，$p_{c}=\sum ^{n}_{i}p_{i}$(各等级造价之和，且LV.1只计入一次)。
 
 !!! example 示例
