--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -518,7 +518,7 @@ m`军事类建筑`
         zs --> md[马镫];
         zs --> yy[医药]:::notmain;
         zs --> fhg[复合弓]:::notmain;
-        md --> jsgc[军事工程] ---> gcqx[攻城器械];
+        md --> jsgc[军事工程] --> gcqx[攻城器械];
         md --> mpyz[马匹育种]:::notmain;
         gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
         gcqx --> jsjs[军事技术]:::target;
@@ -685,7 +685,7 @@ m`军事类建筑`
         zs --> md[马镫];
         zs --> yy[医药]:::notmain;
         zs --> fhg[复合弓]:::notmain;
-        md --> jsgc[军事工程]:::target ---> gcqx[攻城器械]:::notmain;
+        md --> jsgc[军事工程]:::target --> gcqx[攻城器械]:::notmain;
         md --> mpyz[马匹育种]:::notmain;
         gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
         gcqx --> jsjs[军事技术]:::notmain;
@@ -737,7 +737,7 @@ m`军事类建筑`
         zs --> md[马镫]:::notmain;
         zs --> yy[医药]:::notmain;
         zs --> fhg[复合弓]:::target;
-        md --> jsgc[军事工程]:::notmain ---> gcqx[攻城器械]:::notmain;
+        md --> jsgc[军事工程]:::notmain --> gcqx[攻城器械]:::notmain;
         md --> mpyz[马匹育种]:::notmain;
         gcqx --> hy[火药]:::notmain --> hp[火炮]:::notmain;
         gcqx --> jsjs[军事技术]:::notmain;
