--- a/设计文档/建筑1.md
+++ b/设计文档/建筑1.md
@@ -721,7 +721,7 @@ m`军事类建筑`
 | 升级方向       | LV1 |    LV2     |    LV3     |    LV4     |    LV5     |
 | -------------- | :-: | :--------: | :--------: | :--------: | :--------: |
 | **对步兵抗性** | --  |   +50%HP   |   +30%HP   |   +30%HP   |   +30%HP   |
-| **对骑兵抗性** | --  | +20%防御力 | +20%防御力 | +20%防御力 | +20%防御力 |
+| **对骑兵抗性** | ^  | +20%防御力 | +20%防御力 | +20%防御力 | +20%防御力 |
 
 |***
 
@@ -779,7 +779,7 @@ m`军事类建筑`
 | 升级方向             | LV1 |  LV2   |  LV3  |  LV4  |  LV5  |
 | -------------------- | :-: | :----: | :---: | :---: | :---: |
 | **进驻单位攻击力**   | --  | +30%HP | +5%HP | +5%HP | +5%HP |
-| **进驻单位攻击范围** | --  | +30%HP | +5%HP | +5%HP | +5%HP |
-| **进驻单位防御力**   | --  | +30%HP | +5%HP | +5%HP | +5%HP |
+| **进驻单位攻击范围** | ^  | +30%HP | +5%HP | +5%HP | +5%HP |
+| **进驻单位防御力**   | ^  | +30%HP | +5%HP | +5%HP | +5%HP |
 
 |***
