完善建筑文档，撰写基本文档

--- a/设计文档/建筑/0.md
+++ b/设计文档/建筑/0.md
@@ -3,7 +3,7 @@ id: "construct"
 print_background: true
 
 ---
-@import "my-style.less"
+@import "../my-style.less"
 ***
 [TOC]
 ***
@@ -27,6 +27,7 @@ print_background: true
 |  **市场**  | 为资源互换提供增益                           |     是     |
 |  **拒马**  | 吸引火力，阻挡敌方进攻。                     |     是     |
 | **驻防点** | 弓弩系单位与火药系单位可以驻扎于此进行射击。 |     是     |
+| **补给站** | 为单位补给提供增益。                         |     是     |
 
 ***
 
@@ -35,7 +36,7 @@ print_background: true
 ### 建筑建造
 
 地图的三条路上有多个建筑槽位，在游戏开始时均为空闲状态。  
-玩家可以在空闲的建筑槽位建造建筑，确定进行建造后建筑槽位将由空闲状态转为占用状态。建造建筑需要花费一定的黄金并等待一定的时间，这段过程称为**建造过程**，建筑必须在建成后才能起效。
+玩家可以在空闲的建筑槽位建造建筑，确定进行建造后建筑槽                                                                                                                                                                                                            位将由空闲状态转为占用状态。建造建筑需要花费一定的黄金并等待一定的时间，这段过程称为**建造过程**，建筑必须在建成后才能起效。
 
 建筑拥有防御力与HP，一旦HP归零视为建筑被摧毁，其能提供的所有效果将全部消失，建筑槽位将回归空闲状态。  
 通过**修理**可以将建筑的HP回满。  
@@ -294,7 +295,7 @@ m`军事类建筑`
     ```
     需要研发科技<tech>矿井勘探</tech>。
 
-农庄建成后，其每过$t_{i}$时间产生$p_{i}$点食物，其中$p_{i}=k_{i}\cdot {productivity}$（$k_{i}$为转化率，${productivity}$ 为生产力）。
+矿场建成后，其每过$t_{i}$时间产生$g_{i}$点黄金，其中$g_{i}=k_{i}\cdot p_{i}$（$k_{i}$为转化率，$p_{i}$ 为生产力）。
 
 #### 升级 {ignore=true}
 
@@ -412,7 +413,7 @@ m`军事类建筑`
 3. 弓弩系单位**精准度+20%**。
 4. 弓弩系单位**防御力+5%**。
 5. 弓弩系单位**造价-10%**。
-6. 弓弩系单位命中目标时，将对目标造成持续**30%攻击间隔时间的-20%移动速度**效果。
+6. 弓弩系单位命中目标时，将对目标造成持续**20%攻击间隔时间的-20%移动速度**效果。
 
 !!! warning 注意
     靶场的升级不是科技，与其他建筑一样，当靶场被摧毁后，其提供的所有增益效果将全部消失。
@@ -649,8 +650,6 @@ m`军事类建筑`
 
 1. 食物、黄金两种资源互换的**税率更低**。
 2. 黄金能产生其数量**10%的生产力**。
-3. 工人**采集食物的耗时-20%**。
-
 
 #### 升级 {ignore=true}
 
@@ -721,7 +720,7 @@ m`军事类建筑`
 | 升级方向       | LV1 |    LV2     |    LV3     |    LV4     |    LV5     |
 | -------------- | :-: | :--------: | :--------: | :--------: | :--------: |
 | **对步兵抗性** | --  |   +50%HP   |   +30%HP   |   +30%HP   |   +30%HP   |
-| **对骑兵抗性** | ^  | +20%防御力 | +20%防御力 | +20%防御力 | +20%防御力 |
+| **对骑兵抗性** |  ^  | +20%防御力 | +20%防御力 | +20%防御力 | +20%防御力 |
 
 |***
 
@@ -779,7 +778,61 @@ m`军事类建筑`
 | 升级方向             | LV1 |  LV2   |  LV3  |  LV4  |  LV5  |
 | -------------------- | :-: | :----: | :---: | :---: | :---: |
 | **进驻单位攻击力**   | --  | +30%HP | +5%HP | +5%HP | +5%HP |
-| **进驻单位攻击范围** | ^  | +30%HP | +5%HP | +5%HP | +5%HP |
-| **进驻单位防御力**   | ^  | +30%HP | +5%HP | +5%HP | +5%HP |
+| **进驻单位攻击范围** |  ^  | +30%HP | +5%HP | +5%HP | +5%HP |
+| **进驻单位防御力**   |  ^  | +30%HP | +5%HP | +5%HP | +5%HP |
+
+|***
+
+### 补给站
+
+`经济类建筑`
+
+!!! note 解锁路线
+    ``` mermaid
+    flowchart LR
+        A[手推车] --> D[水利]:::notmain;
+        A --> B["行政机构"];
+        A --> C[采矿]:::notmain;
+        D --> E[农学]:::notmain;
+        C --> I[矿井勘探]:::notmain;
+        B --> E ---> d0[历法]:::notmain;
+        B --> J[教育]---> d1[经济];
+        d1 --> K[工程技术]:::notmain
+        d1 --> L[交通运输]:::target
+        B --> I---> d2[化学]:::notmain;
+    classDef notmain fill:#d1d1d1, stroke:#707070;
+    classDef target fill:#fad866, stroke:#c16b1f;
+    ```
+    需要研发科技<tech>交通运输</tech>。
+
+市场建成后，可以为单位补给提供增益效果，包括：
+
+1. 单位要求补给的时间间隔**延长50%**。
+2. 补给站所在路上**单位的移动速度+30%**。
+3. 食物能提供**其数量5%的生产力**
+
+
+!!! tip 提示
+    - 因为距离驻防点最近的弓弩系或火药系单位会自动进驻驻防点，因此在向建设有驻防点的路派遣单位时，派出单位的顺序将变得更加重要。
+    - 敌方单位进攻驻防点时，需要先杀死驻扎在驻防点内的单位，再攻击驻防点建筑本身。
+
+#### 升级 {ignore=true}
+
+补给站只有一个方向的升级。
+
+| 升级方向   | LV1  | LV2  | LV3  |
+| ---------- | :--: | :--: | :--: |
+| **补给量** | -20% | -20% | -20% |
+
+不同升级的花销：
+
+| 升级方向   |     LV1      |    LV2     |    LV3     |
+| ---------- | :----------: | :--------: | :--------: |
+| **补给量** | (12金 + 10s) | (5金 + 7s) | (5金 + 7s) |
+
+升级能提供的基本数值属性增益：
+| 升级方向   | LV1 |  LV2   |  LV3   |
+| ---------- | :-: | :----: | :----: |
+| **补给量** | --  | +20%HP | +20%HP |
 
 |***
