--- a/设计文档/政策/0.md
+++ b/设计文档/政策/0.md
@@ -91,8 +91,8 @@ flowchart LR
 
 | 等级   | 政策名   | 政策效果                                                                             | 占用槽位 |
 | ------ | -------- | ------------------------------------------------------------------------------------ | -------- |
-| **T0** | 民族认同      | 超过两名士兵聚集时，每位聚集的士兵攻击力+30%。                                                                               | 4        |
-| ^      | 军事战术      | 若某一局部范围内存在本方三种及以上不同兵种的士兵，则范围内的士兵攻击力+20%，防御力+20%。                                                                                 | 4        |
+| **T0** | 军团战术      | 超过三名士兵聚集时，每位聚集的士兵攻击力+30%。                                                                               | 4        |
+| ^      | 协同战术      | 若某一局部范围内存在本方三种及以上不同兵种的士兵，则范围内的士兵攻击力+20%，防御力+20%。                                                                                 | 4        |
 | ^      | 理性主义      | 购买科技免费，但科技研发速度-50%。                                                                                 | 4        |
 | ^      | 官僚体系      | 政策冷却时间-50%， 所有单位生产力+100%，但维护费用+50%。                                                                                 | 4        |
 | ^      | 铸币权      | 场上士兵及工人每25秒产生1黄金。                                                                                 | 4        |
@@ -100,8 +100,8 @@ flowchart LR
 | **T1** | 封建制度 | 农场在每次采集中额外生产2食物，但士兵的生产速度-20%。 | 3        |
 | ^      | 中央集权 | 士兵生产速度+20%，建筑生产速度+15%，但单位造价+10%，建筑造价+10%。                                                       | 3        |
 | ^      | 政教合一 | 士兵造价-10%，黄金采集速度+10%，但科技研发速度-10%，政策冷却时间+10%。                                                      | 3        |
-| ^      | 卫国战争 | 士兵在本方基地到战场$1/3$时攻击力+30%。                                                      | 2        |
-| ^      | 以战养战 | 士兵在战斗时不消耗补给。                                                      | 3        |
+| ^      | 勤王 | 士兵在本方基地到战场$1/3$的区间内攻击力+30%。                                                      | 2        |
+| ^      | 军事后勤 | 士兵在本方基地到战场中线的区间内不消耗补给。                                                      | 3        |
 | ^      | 人文主义 | 士兵生产速度+100%，士兵单位预备役上限+3，但攻击力-40%，防御力-20%。                                                      | 3        |
 | ^      | 宗族观念 | 工人生产速度+100%，工人预备役上限+5，但士兵造价+50%。                                                      | 3        |
 | ^      | 殖民 | 若本方研发科技数量大于对方，则单位生产速度+20%，建筑建造速度+20%。                                                      | 3        |
