--- a/设计文档/政策/0.md
+++ b/设计文档/政策/0.md
@@ -91,9 +91,9 @@ flowchart LR
 
 | 等级   | 政策名   | 政策效果                                                                             | 占用槽位 |
 | :------: | -------- | ------------------------------------------------------------------------------------ | -------- |
-| **T0** | 军团战术      | 超过三名士兵聚集时，每位聚集的士兵攻击力+30%。                                                                               | 4        |
+| **T0** | 军团战术      | 超过三名士兵聚集时，每位聚集的士兵攻击力+25%。                                                                               | 4        |
 | ^      | 协同战术      | 若某一局部范围内存在本方三种及以上不同兵种的士兵，则范围内的士兵攻击力+20%，防御力+20%。                                                                                 | 4        |
-| ^      | 理性主义      | 购买科技免费，但科技研发速度-50%。                                                                                 | 4        |
+| ^      | 理性主义      | 科技研发速度+50%，科技购买价格+50%。                                                                                 | 4        |
 | ^      | 官僚体系      | 政策冷却时间-50%， 所有单位生产力+100%，但维护费用+50%。                                                                                 | 4        |
 | ^      | 铸币权      | 场上士兵及工人每25秒产生1黄金。                                                                                 | 4        |
 | ^      | 扫荡 | 骑兵单位每造成50点伤害，可获得1黄金。                                                      | 3        |
